# Squalr

./: .gitignore  .rustfmt.toml  AGENTS.md  AGENTS_CURRENT_TASK.md  ASM.md  Cargo.toml  README.md  Release.py  agentic_loop.py  build_and_deploy.py  debug_run_privileged_shell.py  release.py  run_apk.py  rust-toolchain.toml  verify_android_windowed_processes.py
olorin/: Cargo.toml  build.rs
olorin-android/: Cargo.toml  build_and_deploy.py  debug_run_privilged_shell.py
olorin-android/android/: AndroidManifest.xml
olorin-android/src/: lib.rs
olorin-engine/: Cargo.toml
olorin-engine-scanning/: Cargo.toml
olorin-engine-scanning/src/: lib.rs  scan_settings_config.rs
olorin-engine-scanning/src/freeze_task/: snapshot_scan_result_freeze_task.rs
olorin-engine-scanning/src/pointer_scans/: mod.rs  pointer_scan_executor_task.rs
olorin-engine-scanning/src/results/: snapshot_scan_result_freeze_task.rs
olorin-engine-scanning/src/scanners/: element_scan_dispatcher.rs  element_scan_executor_task.rs  snapshot_region_memory_reader.rs  snapshot_scanner.rs  value_collector_task.rs
olorin-engine-scripting/: Cargo.toml
olorin-engine/src/: engine_execution_context.rs  engine_mode.rs  engine_privileged_state.rs  lib.rs  olorin_engine.rs
olorin-engine/src/app_provisioner/: app_provisioner_config.rs
olorin-engine/src/command_executors/: engine_command_executor.rs  engine_request_executor.rs  mod.rs
olorin-engine/src/engine_bindings/: engine_egress.rs  engine_ingress.rs  engine_priviliged_bindings.rs  engine_unprivileged_bindings.rs  mod.rs
olorin-engine/src/tasks/: trackable_task_manager.rs
olorin-tui/: Cargo.toml
olorin-tui/src/: main.rs
olorin/src/: main.rs
plugins/squalr-plugin-builtins/: Cargo.toml
plugins/squalr-plugin-builtins/src/: lib.rs
plugins/squalr-plugin-instructions-x86/: Cargo.toml
plugins/squalr-plugin-instructions-x86/src/: comparison_stubs.rs  constants.rs  instruction_parser_corpus_tests.rs  instruction_set.rs  lib.rs  plugin.rs  x86_memory_operand.rs  x86_opcode_candidate_index.rs  x86_opcode_index.rs  x86_operand_lowering.rs  x86_register.rs
squalr/: Cargo.toml  build.rs
squalr-android/: Cargo.toml  build.rs  build_and_deploy.py  debug_run_privileged_shell.py  debug_run_privilged_shell.py  run-apk.py  run_apk.py
squalr-android/android/: AndroidManifest.xml
squalr-android/src/: lib.rs
squalr-android/src/models/: mod.rs
squalr-android/src/view_models/: mod.rs
squalr-android/ui/: view_model_bindings.slint
squalr-android/ui/components/: groupbox.slint
squalr-android/ui/controls/: scan_constraint_button.slint
squalr-cli/: Cargo.toml
squalr-cli/src/: cli.rs  cli_log_listener.rs  command.rs  log_listener.rs  main.rs  session_manager.rs
squalr-cli/src/command_handlers/: mod.rs
squalr-cli/src/logging/: cli_log_listener.rs  mod.rs
squalr-cli/src/response_handlers/: mod.rs
squalr-cli/src/runtime/: mod.rs  runtime.rs  runtime_mode.rs
squalr-engine/: Cargo.toml
squalr-engine-api/: Cargo.toml
squalr-engine-api/src/: lib.rs
squalr-engine-api/src/commands/: command_invocation.rs  engine_command.rs  engine_command_request.rs  engine_command_response.rs  engine_request.rs  engine_response.rs  mod.rs  privileged_command.rs  privileged_command_request.rs  privileged_command_response.rs  privileged_command_result.rs  text.rs  unprivileged_command.rs  unprivileged_command_request.rs  unprivileged_command_response.rs
squalr-engine-api/src/conversions/: base_system_conversions.rs  command_line_conversions.rs  conversions.rs  conversions_from_binary.rs  conversions_from_decimal.rs  conversions_from_hexadecimal.rs  conversions_from_primitives.rs  mod.rs  storage_size_conversions.rs
squalr-engine-api/src/dependency_injection/: dep_tuple.rs  (+5 more)
squalr-engine-common/: Cargo.toml
squalr-engine-common/src/: conversions.rs  lib.rs
squalr-engine-debuggers/: Cargo.toml
squalr-engine-debuggers/src/: lib.rs
squalr-engine-memory/: Cargo.toml
squalr-engine-memory/src/: emulator_type.rs  imemory_queryer.rs  lib.rs  memory_alignment.rs  memory_protection_enum.rs  memory_queryer.rs  memory_settings.rs  memory_type_enum.rs  normalized_flags.rs  normalized_module.rs  normalized_region.rs  region_bounds_handling.rs
squalr-engine-operating-system/: Cargo.toml
squalr-engine-processes/: Cargo.toml
squalr-engine-processes/src/: lib.rs  process_extension_methods.rs  process_info.rs  process_monitor.rs  process_session.rs
squalr-engine-projects/: Cargo.toml
squalr-engine-projects/src/: lib.rs  project.rs
squalr-engine-scanning/: Cargo.toml
squalr-engine-scanning/src/: floating_point_tolerance.rs  lib.rs  scan_settings.rs  scan_settings_config.rs
squalr-engine-scripting/: Cargo.toml
squalr-engine-session/: Cargo.toml
squalr-engine-session/src/: engine_privileged_state.rs  engine_unprivileged_state.rs  lib.rs
squalr-engine/src/: cli.rs  command.rs  engine_command.rs  engine_execution_context.rs  engine_initialization_error.rs  engine_mode.rs  engine_privileged_state.rs  general_settings_config.rs  lib.rs  session_manager.rs  squalr_engine.rs  squalr_session.rs  startup_messages.rs
squalr-gui/: Cargo.toml  build.rs
squalr-gui/src/: lib.rs
squalr-gui/ui/: build.slint  theme.slint  view_model_bindings.slint
squalr-installer/: Cargo.toml  build.rs
squalr-installer/src/: app.rs  installer_runtime.rs  logging.rs  main.rs  theme.rs  ui_assets.rs  ui_state.rs
squalr-tests/: Cargo.toml
squalr-tests/src/: lib.rs
squalr-tests/tests/: memory_command_tests.rs  os_behavior_command_tests.rs  process_command_tests.rs  project_command_tests.rs  project_items_command_tests.rs  registry_sync_tests.rs  scan_command_tests.rs  scan_results_command_tests.rs  settings_command_tests.rs  trackable_tasks_command_tests.rs
squalr-tui/: Cargo.toml
squalr-tui/src/: main.rs
squalr/android/: AndroidManifest.xml
squalr/examples/: self_attach_symbol_tree_preview_probe.rs
squalr/src/: app.rs  app_context.rs  callback.rs  lib.rs  main.rs  mvc.rs  ui.rs
squalr/ui/: build.slint  main_window.slint  theme.slint  view_model_bindings.slint
(+3726 files in other folders)
