[workspace]
members = [
    "plugins/squalr-plugin-builtins",
    "plugins/squalr-plugin-data-types-24bit",
    "plugins/squalr-plugin-instructions-arm",
    "plugins/squalr-plugin-instructions-powerpc",
    "plugins/squalr-plugin-instructions-x86",
    "plugins/squalr-plugin-memory-view-dolphin",
    "plugins/squalr-plugin-binary-symbols",
    "squalr-tests",
    "squalr-engine-api",
    "squalr-engine-domain",
    "squalr-engine-targets",
    "squalr-engine-session",
    "squalr-engine-targets-native",
    "squalr-engine",
    "squalr-engine-projects",
    "squalr-engine-scanning",
    "squalr-cli",
    "squalr-tui",
    "squalr-installer",
    "squalr",
]
resolver = "3"

[profile.release]

[profile.release-with-debug]
inherits = "release"
debug = true
