[package]
name = "olorin-android"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint-mvvm = { path = "../slint-mvvm" }
slint-mvvm-macros = { path = "../slint-mvvm-macros" }
olorin-engine = { path = "../olorin-engine" }
olorin-engine-api = { path = "../olorin-engine-api" }
olorin-engine-architecture = { path = "../olorin-engine-architecture" }
olorin-engine-common = { path = "../olorin-engine-common" }
olorin-gui = { path = "../olorin-gui" }
futures = ">=0.3.31"
log = ">=0.4.27"
rayon = ">=1.10.0"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
slint = { version = "=1.11.0", default-features = false, features = ["accessibility", "backend-android-activity-06", "compat-1-2", "std"] }
structopt = ">=0.3.26"
sysinfo = "=0.34.2"

[build-dependencies]
winresource = ">=0.1.20"
