[package]
name = "olorin-engine-scanning"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
olorin-engine-api = { path = "../olorin-engine-api" }
olorin-engine-common = { path = "../olorin-engine-common" }
olorin-engine-memory = { path = "../olorin-engine-memory" }
bitflags = ">=2.6.0"
bytemuck = ">=1.17.0"
futures = ">=0.3.30"
lazy_static = ">=1.5.0"
log = { version = ">=0.4.26" }
rayon = "1.10.0"
seq-macro = ">=0.3.5"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
smallvec = { version = ">=1.14.0" }
sysinfo = "=0.34.2"

[build-dependencies]

