[package]
name = "olorin-tui"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
olorin-engine = { path = "../olorin-engine" }
olorin-engine-api = { path = "../olorin-engine-api" }
olorin-engine-common = { path = "../olorin-engine-common" }
crossbeam-channel = ">=0.5.15"
futures = ">=0.3.31"
log = ">=0.4.27"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
shlex = ">=1.3.0"
structopt = ">=0.3.26"

[build-dependencies]
