[package]
name = "olorin"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
slint-mvvm = { path = "../slint-mvvm" }
slint-mvvm-macros = { path = "../slint-mvvm-macros" }
olorin-engine = { path = "../olorin-engine" }
olorin-engine-api = { path = "../olorin-engine-api" }
olorin-gui = { path = "../olorin-gui" }
log = ">=0.4.27"
slint = { version = "=1.11.0", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-software", "std"] }

[build-dependencies]
winresource = ">=0.1.20"
