[package]
name = "squalr-android"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
squalr-engine = { path = "../squalr-engine" }
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-architecture = { path = "../squalr-engine-architecture" }
squalr-engine-common = { path = "../squalr-engine-common" }
futures = ">=0.3.31"
log = ">=0.4.27"
rayon = ">=1.10.0"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
slint = { version = "=1.11.0", default-features = false, features = ["accessibility", "backend-android-activity-06", "compat-1-2", "std"] }
structopt = ">=0.3.26"
sysinfo = "=0.34.2"

[build-dependencies]
winresource = ">=0.1.20"
