[package]
name = "squalr-cli"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2021"
# build = "build.rs"

[profile.release]
debug = true

[dependencies]
squalr-engine = { path = "../squalr-engine" }
squalr-engine-architecture = { path = "../squalr-engine-architecture" }
squalr-engine-common = { path = "../squalr-engine-common" }
squalr-engine-debuggers = { path = "../squalr-engine-debuggers" }
squalr-engine-memory = { path = "../squalr-engine-memory" }
squalr-engine-processes = { path = "../squalr-engine-processes" }
squalr-engine-projects = { path = "../squalr-engine-projects" }
squalr-engine-scanning = { path = "../squalr-engine-scanning" }
squalr-engine-scripting = { path = "../squalr-engine-scripting" }
futures = ">=0.3"
structopt = ">=0.3"
shlex = ">=1.0"
sysinfo = ">=0.30"

[build-dependencies]
