[package]
name = "squalr-cli"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine = { path = "../squalr-engine" }
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-common = { path = "../squalr-engine-common" }
futures = ">=0.3.31"
serde = { version = ">=1.0.0", features = ["derive"] }
serde_json = ">=1.0.139"
shlex = ">=1.0"
structopt = ">=0.3.26"

[build-dependencies]
