[package]
name = "squalr-engine-api"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-common = { path = "../squalr-engine-common" }
anyhow = ">=1.0.98"
crossbeam-channel = ">=0.5.15"
dashmap = ">=6.1.0"
directories = ">=6.0.0"
encoding = ">=0.2.33"
encoding_rs = ">=0.8.35"
log = ">=0.4.27"
rayon = "1.10.0"
num-traits = { version = ">=0.2.19" }
serde = { version = ">=1.0.139", features = ["derive"] }
serde_json = ">=1.0.140"
slab = ">=0.4.9"
structopt = ">=0.3.26"
sysinfo = "=0.34.2"
thiserror = ">=2.0.12"
typetag = ">=0.2.20"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[build-dependencies]

