[package]
name = "squalr-engine-common"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
anyhow = ">=1.0.96"
crossbeam-channel = ">=0.5.14"
dashmap = ">=6.1.0"
dirs = ">=6.0.0"
futures = ">=0.3.31"
log = { version = ">=0.4.26" }
log4rs = { version = ">=1.3.0" }
hex = { version = ">=0.4.3" }
num-traits = { version = ">=0.2.19" }
rayon = { version = ">=1.10.0" }
serde = { version = ">=1.0.139", features = ["derive"] }
serde_json = ">=1.0.139"
sysinfo = ">=0.31.2"
uuid = { version = ">=1.15.1", features = ["v4"] }

[build-dependencies]

