[package]
name = "squalr-engine-common"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
anyhow = ">=1.0.96"
crossbeam-channel = ">=0.5.14"
dirs = ">=6.0.0"
log = { version = ">=0.4.26" }
log4rs = { version = ">=1.3.0" }
num-traits = { version = ">=0.2.19" }
serde = { version = ">=1.0.139", features = ["derive"] }
serde_json = ">=1.0.139"

[build-dependencies]

