[package]
name = "squalr-engine-memory"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-common = { path = "../squalr-engine-common" }
squalr-engine-processes = { path = "../squalr-engine-processes" }
bitflags = ">=1.3.2"
dll-syringe = { version = ">=0.15.2", features = ["into-x86-from-x64", "payload-utils"] }
serde = { version = ">=1.0.0", features = ["derive"] }
serde_json = ">=1.0.0"
sysinfo = ">=0.30"
windows-sys = { version = ">=0.59.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading"] }

[build-dependencies]

