[package]
name = "squalr-engine-memory"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-common = { path = "../squalr-engine-common" }
bitflags = ">=2.6.0"
dll-syringe = { version = ">=0.15.2", features = ["into-x86-from-x64", "payload-utils"] }
libc = ">=0.2.169"
log = { version = ">=0.4.26" }
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
sysinfo = ">=0.34.2"
windows-sys = { version = ">=0.59.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading"] }

[build-dependencies]

