[package]
name = "squalr-engine-operating-system"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
bitflags = "2.10.0"
image = "0.25.9"
libc = "0.2.180"
log = { version = "0.4.29" }
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.0"
thiserror = "2.0.18"
windows-sys = { version = "0.61.2", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
]}
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }
