[package]
name = "squalr-engine-processes"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-common = { path = "../squalr-engine-common" }
byteorder = ">=1.5.0"
image = ">=0.25.5"
jni = ">=0.21.1"
once_cell = ">=1.20.2"
rayon = ">=1.10.0"
regex = ">=1.11.1"
serde = ">=1.0.217"
sysinfo = ">=0.31.2"
windows-sys = { version = ">=0.59", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}
zip = ">=2.2.2"

[build-dependencies]

