[package]
name = "squalr-engine-processes"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
image = ">=0.25.6"
log = { version = ">=0.4.26" }
once_cell = ">=1.20.3"
rayon = ">=1.10.0"
regex = ">=1.11.1"
serde = ">=1.0.219"
sysinfo = "=0.34.2"
thiserror = ">=2.0.12"
windows-sys = { version = "=0.59", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}
zip = { version = ">=5.1.1",default-features = false, features = ["deflate"]}

[build-dependencies]

