[package]
name = "squalr-engine-projects"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
anyhow = ">=1.0.96"
serde = { version = ">=1.0.0", features = ["derive"] }
serde_json = ">=1.0.139"

[build-dependencies]

