[package]
name = "squalr-engine-projects"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
anyhow = ">=1.0.98"
log = { version = ">=0.4.26" }
notify = ">=8.0.0"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"

[build-dependencies]

