[package]
name = "squalr-engine-scanning"
version = "0.1.0"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-common = { path = "../squalr-engine-common" }
squalr-engine-memory = { path = "../squalr-engine-memory" }
bitflags = ">=2.6.0"
bytemuck = ">=1.17.0"
dashmap = { version = ">=6.0.1", features = ["inline", "rayon"] }
futures = ">=0.3.30"
lazy_static = ">=1.5.0"
log = { version = ">=0.4.26" }
rayon = "1.10.0"
seq-macro = ">=0.3.5"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
smallvec = { version = ">=1.14.0" }
sysinfo = ">=0.34.2"

[build-dependencies]

