[package]
name = "squalr-engine-scanning"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
bitflags = "2.10.0"
bytemuck = "1.25.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = { version = "0.4.29" }
rayon = "1.10.0"
seq-macro = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = { version = "1.15.1" }
thiserror = "2.0.18"

[build-dependencies]

