[package]
name = "squalr-engine-session"
version = "0.4.0"
authors = ["Zachary Canann"]
edition = "2024"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-projects = { path = "../squalr-engine-projects" }
squalr-engine-targets = { path = "../squalr-engine-targets" }
squalr-engine-targets-native = { path = "../squalr-engine-targets-native" }
squalr-plugin-builtins = { path = "../plugins/squalr-plugin-builtins" }
anyhow = "1.0.101"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
log = "0.4.29"
log4rs = "1.4.0"
notify = "8.2.0"
serde_json = "1.0.149"
sysinfo = "0.38.0"

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.2"

[dev-dependencies]
tempfile = "3.24.0"
