[package]
name = "squalr-engine"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-architecture = { path = "../squalr-engine-architecture" }
squalr-engine-debuggers = { path = "../squalr-engine-debuggers" }
squalr-engine-memory = { path = "../squalr-engine-memory" }
squalr-engine-processes = { path = "../squalr-engine-processes" }
squalr-engine-projects = { path = "../squalr-engine-projects" }
squalr-engine-scanning = { path = "../squalr-engine-scanning" }
squalr-engine-scripting = { path = "../squalr-engine-scripting" }
anyhow = ">=1.0.98"
bincode = "=1.3.3"
crossbeam-channel = ">=0.5.15"
dirs = ">=6.0.0"
interprocess = ">=2.2.2"
futures-util = ">= 0.3.31"
log = ">=0.4.27"
native-tls = "0.2.14" 
opener = "0.8.3"
rfd = ">=0.16.0"
self-replace = ">=1.5.0"
semver = ">=1.0.26"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
structopt = ">=0.3.26"
sysinfo = "=0.34.2"
tempfile = ">=3.19.1"
thiserror = ">=2.0.12"
ureq = { version = "3.0.11", default-features = false, features = ["native-tls"] }
url = ">=2.5.4"
urlencoding = ">=2.1.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }

[build-dependencies]

