[package]
name = "squalr-engine"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-architecture = { path = "../squalr-engine-architecture" }
squalr-engine-debuggers = { path = "../squalr-engine-debuggers" }
squalr-engine-memory = { path = "../squalr-engine-memory" }
squalr-engine-processes = { path = "../squalr-engine-processes" }
squalr-engine-projects = { path = "../squalr-engine-projects" }
squalr-engine-scanning = { path = "../squalr-engine-scanning" }
squalr-engine-scripting = { path = "../squalr-engine-scripting" }
anyhow = "1.0.101"
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
interprocess = "2.3.1"
futures-util = "0.3.31"
log = "0.4.29"
native-tls = "0.2.14" 
opener = "0.8.3"
rfd = "0.17.2"
self-replace = "1.5.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
structopt = "0.3.26"
sysinfo = "0.38.0"
tempfile = "3.24.0"
thiserror = "2.0.18"
ureq = { version = "3.0.11", default-features = false, features = ["native-tls"] }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }

[build-dependencies]

