[package]
name = "squalr-gui"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine = { path = "../squalr-engine" }
squalr-engine-api = { path = "../squalr-engine-api" }
anyhow = ">=1.0.98"
futures = ">=0.3.31"
log = ">=0.4.27"
rayon = ">=1.10.0"
rodio = "=0.20.1"
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
slint = { version = "=1.11.0", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-software", "std"] }
structopt = ">=0.3.26"
sysinfo = "=0.34.2"

[build-dependencies]
slint-build = { version = "=1.11.0" }
