[package]
name = "squalr-installer"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[features]
default = ["binary-mode"]
binary-mode = [] 

[dependencies]
slint-mvvm = { path = "../slint-mvvm" }
slint-mvvm-macros = { path = "../slint-mvvm-macros" }
squalr-engine = { path = "../squalr-engine" }
log = { version = ">=0.4.27" }
slint = { version = ">=1.10.0", default-features = false, features = ["accessibility", "backend-winit", "compat-1-2", "renderer-software", "std"] }

[build-dependencies]
slint-build = { version = ">=1.10.0" }
winresource = ">=0.1.20"