[package]
name = "squalr-installer"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[features]
default = ["binary-mode"]
binary-mode = [] 

[dependencies]
squalr-engine = { path = "../squalr-engine" }
anyhow = ">=1.0.98"
eframe = ">=0.32.3"
epaint = ">=0.32.3"
log = { version = ">=0.4.27" }
image = ">=0.25.6"

[build-dependencies]
winresource = ">=0.1.20"
