[package]
name = "squalr-installer"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[features]
default = ["binary-mode"]
binary-mode = [] 

[dependencies]
squalr-engine = { path = "../squalr-engine" }
anyhow = "1.0.101"
eframe = "0.33.3"
epaint = "0.33.3"
log = { version = "0.4.29" }
image = "0.25.9"

[build-dependencies]
winresource = "0.1.30"
