[package]
name = "squalr-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
squalr-engine = { path = "../squalr-engine" }
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-session = { path = "../squalr-engine-session" }
squalr-engine-operating-system = { path = "../squalr-engine-operating-system" }
structopt = "0.3.26"
