[package]
name = "squalr-tui"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine = { path = "../squalr-engine" }
squalr-engine-api = { path = "../squalr-engine-api" }
anyhow = "1.0.101"
crossbeam-channel = "0.5.15"
futures = "0.3.31"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
structopt = "0.3.26"

[build-dependencies]
