[package]
name = "squalr"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[dependencies]
squalr-engine = { path = "../squalr-engine" }
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-session = { path = "../squalr-engine-session" }
anyhow = "1.0.101"
arc-swap = "1.8.1"
bus = "2.4.1"
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
env_logger = "0.11.8"
epaint = "0.33.3"
image = "0.25.9"
log = "0.4.29"
rodio = "0.21.1"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "1.15.1"
wasm-bindgen = "0.2"

[build-dependencies]
winresource = "0.1.30"
