[package]
name = "squalr"
version = "0.1.1"
authors = ["Zachary Canann"]
edition = "2024"
# build = "build.rs"

[package.metadata.android]
package = "com.squalr.android"
resources = "android/res"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 30

[package.metadata.android.application]
label = "Squalr"
icon = "@drawable/app_icon"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
squalr-engine = { path = "../squalr-engine" }
squalr-engine-api = { path = "../squalr-engine-api" }
squalr-engine-session = { path = "../squalr-engine-session" }
anyhow = "1.0.101"
arc-swap = "1.8.1"
bus = "2.4.1"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
epaint = "0.33.3"
image = "0.25.9"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "1.15.1"
wasm-bindgen = "0.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = "0.33.3"
rodio = "0.21.1"

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["glow", "android-native-activity"] }
android-activity = "0.6.0"
android_logger = "0.15.1"

[build-dependencies]
winresource = "0.1.30"
