[package]
name = "squalr-plugin-builtins"
version = "0.3.0"
authors = ["Zachary Canann"]
edition = "2024"

[dependencies]
squalr-engine-api = { path = "../../squalr-engine-api" }
squalr-plugin-data-types-24bit = { path = "../squalr-plugin-data-types-24bit" }
squalr-plugin-memory-view-dolphin = { path = "../squalr-plugin-memory-view-dolphin" }