[package]
name = "squalr-plugin-builtins"
version = "0.3.0"
authors = ["Zachary Canann"]
edition = "2024"

[dependencies]
squalr-engine-api = { path = "../../squalr-engine-api" }
squalr-plugin-data-types-24bit = { path = "../squalr-plugin-data-types-24bit" }
squalr-plugin-instructions-arm = { path = "../squalr-plugin-instructions-arm" }
squalr-plugin-instructions-powerpc = { path = "../squalr-plugin-instructions-powerpc" }
squalr-plugin-instructions-x86 = { path = "../squalr-plugin-instructions-x86" }
squalr-plugin-memory-view-dolphin = { path = "../squalr-plugin-memory-view-dolphin" }
squalr-plugin-symbols-pe = { path = "../squalr-plugin-symbols-pe" }
